--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crypto-js-utils",
+  "name": "@higayasuo/crypto-js-utils",
   "version": "1.0.0",
   "description": "A collection of utilities for crypto-js",
   "type": "module",
